CSS: Fix overflow on the download button

--- a/scss/pages/_downloads.scss
+++ b/scss/pages/_downloads.scss
@@ -31,7 +31,6 @@ span.daily_provider {
 	#downloadButton {
 		min-height: 53px;
 		float: left;
-		margin-bottom: 30px;
 		width: 100%;
 		padding: 15px;
 		color: $theme-download-text;
